Did some color contrast, fixed centering

--- a/HerdManager/css/Content.css
+++ b/HerdManager/css/Content.css
@@ -1,7 +1,7 @@
 ﻿.outer {
     display: table;
     position: absolute;
-    height: 100%;
+    height: calc(100% - 190px);
     width: 100%;
 }
 
@@ -13,7 +13,7 @@
 .LogInCenter {
     margin-left: auto;
     margin-right: auto;
-    width: 500px;
+    width: 200px;
 }
 .NewAnimalCenter{
     margin-left: auto;
@@ -21,7 +21,7 @@
     width: 40%;
 }
 #LogInTable{
-    margin: 0% 25% 0% 25%;
+    background-color: gray; 
 }
 .navbardiv{
     position:absolute;
